homelab/apps/homepage/resources/ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homepage
  annotations:
    tailscale.com/funnel: "flase"
spec:
  ingressClassName: tailscale
  tls:
  - hosts:
    - "homepage"
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: homepage
            port:
              number: 3000
